Fix z-index

--- a/app/assets/stylesheets/section/showroom.scss
+++ b/app/assets/stylesheets/section/showroom.scss
@@ -89,7 +89,7 @@
           height: 26px;
           display: block;
           top: 80px;
-          z-index: 1000;
+          z-index: 100;
           &.prev {
             background-position: 0 0;
             left: 10px;
